# chorderizer

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.Jules/: bolt.md  palette.md  sentinel.md  testing.md
.github/issues/: issue-001-manejo-de-excepciones-permisivo-en-la-inicialización-del-dashboard-de-textualmd
.github/workflows/: python-publish.yml
.jules/: sentinel.md
docs/: AGENT.md  GEMINI.md  IDENTITY.md  MEMORY.md  SOUL.md
docs/wiki/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Home.md  USER_GUIDE.md  decisions.md  failures.md  index.md  technical_debt.md
docs/wiki/assets/: demo.tape
docs/wiki/audits/: openssf_audit.md  qp_audit.md
src/chorderizer/: chorderizer.py  generators.py  translations.py  tui_app.py  tui_widgets.py
tests/: test_generators.py
