[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorderizer"
version = "0.3.2"
authors = [
    { name = "TropicalDev", email = "julioglez.93@gmail.com" }
]
description = "Generador avanzado de progresiones de acordes MIDI con Dashboard TUI reactivo y visualizadores."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
    "Operating System :: OS Independent",
]
dependencies = [
    "mido>=1.3.3,<2.0.0",
    "colorama>=0.4.6,<1.0.0",
    "prompt_toolkit>=3.0.0,<4.0.0",
    "textual>=0.86.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/TropicalDev/Chorderizer"
"Bug Tracker" = "https://github.com/TropicalDev/Chorderizer/issues"

[project.scripts]
chorderizer = "chorderizer.chorderizer:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chorderizer*"]

[tool.setuptools.package-data]
chorderizer = ["data/*.json"]

[tool.ruff]
# Target Python version
target-version = "py38"

# Line length compatible with TUI layouts and Rich panels
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Isort (I), Bandit (S), Bugbear (B), Pyupgrade (UP), and Comprehensions (C4)
select = ["F", "E", "W", "I", "S", "B", "UP", "C4"]

# Rules to ignore:
# E501: Line too long (handled by formatter)
# S101: Use of assert (standard for pytest)
ignore = ["E501", "S101"]

# Allow unused imports in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "E402"]

[tool.ruff.format]
# Keep it consistent with the "Black" style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
